[package]
name = "cumulus-upward-message"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch", default-features = false }

# Polkadot deps
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }

# All these should be optional dependenices, but given the perfect Cargo, it is not possible.
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }
westend-runtime = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"polkadot-runtime/std",
	"kusama-runtime/std",
	"westend-runtime/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
]
# Should be enabled by when compiling the runtime for WASM.
#
# This disables the runtime api of the Polkadot/Kusama/Westend
# runtimes to not clash with the runtime api of the Parachain when building
# for WASM.
runtime-wasm = [
	"polkadot-runtime/disable-runtime-api",
	"westend-runtime/disable-runtime-api",
	"kusama-runtime/disable-runtime-api",
]
